// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render covered line 1`] = `
<td
  className="source-meta source-line-coverage source-line-covered"
  data-line-number={3}
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <Tooltip
    overlay="source_viewer.tooltip.covered"
    placement="right"
  >
    <div
      className="source-line-bar"
    />
  </Tooltip>
  <BubblePopupHelper
    isOpen={false}
    popup={
      <CoveragePopup
        branch={undefined}
        componentKey="foo"
        line={
          Object {
            "coverageStatus": "covered",
            "line": 3,
          }
        }
        onClose={[Function]}
      />
    }
    position="bottomright"
    togglePopup={[Function]}
  />
</td>
`;

exports[`render line with unknown coverage 1`] = `
<td
  className="source-meta source-line-coverage"
  data-line-number={3}
>
  <div
    className="source-line-bar"
  />
</td>
`;

exports[`render uncovered line 1`] = `
<td
  className="source-meta source-line-coverage source-line-uncovered"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.tooltip.uncovered"
    placement="right"
  >
    <div
      className="source-line-bar"
    />
  </Tooltip>
</td>
`;
